# python-modules

./: main.py  pyproject.toml
version_manager/: README.MD  __init__.py  __main__.py  changelog.md  manager.py  pyproject.toml  version.py
version_manager/tests/: test_manager.py
version_manager/version_manager/: __main__.py  manager.py  version.py
