[project]
name = "python-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bump2version>=1.0.1",
    "pytest>=8.4.1",
    "toml>=0.10.2",
    "version-manager",
]

[tool.uv.sources]
version-manager = { url = "https://github.com/Jurgen-Be/python-modules/releases/download/version_manager-v0.2.3/version_manager-0.2.3-py3-none-any.whl" }
