# version_manager/pyproject.toml

[project]
name = "version_manager"
version = "0.2.3"
description = "Profesionele versiebeheer voor python uv-modules"
authors = [{name = "Jurgen Bergmans"}]
dependencies = ["bump2version", "toml"]

[project.scripts]
version-manager = "version_manager.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"